data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2140.wast
;; 10. **Test with Overflow Operand:**     - Description: Include a `br_table` that receives an operand beyond the allowed i32 limit, to test how overflow is treated and whether it falls back to the default label.     - Constraint Checked: Operand bounds checking and fallback mechanism.     - Relates to Unreachable Code Execution: Overflowing operand could lead to an incorrect branching if not handled properly, hitting the `unreachable` instruction.

(assert_invalid
  (module
    (func (block 
      (br_table 0 1 (i32.const -1)) 
    ))
  )
  "unknown label"
)